--- a/mediapipe/examples/android/src/java/com/google/mediapipe/apps/myapp/BUILD
+++ b/mediapipe/examples/android/src/java/com/google/mediapipe/apps/myapp/BUILD
@@ -12,10 +12,9 @@ android_library(
         "//third_party:androidx_constraint_layout",
         "//third_party:androidx_appcompat",
         "//third_party:opencv",
+        "@maven//:androidx_core_core",
         "@maven//:androidx_concurrent_concurrent_futures",
         "@maven//:com_google_guava_guava",
-        "@maven//:androidx_navigation_navigation_fragment",
-        "@maven//:androidx_navigation_navigation_ui"
     ],
 )
 
